--- a/SerializersTests/SerializersTests.csproj
+++ b/SerializersTests/SerializersTests.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>SerializersTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,16 +66,19 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\BinaryFormatterAdapter.cs" />
+    <Compile Include="Adapters\DataContractJsonSerializerAdapter.cs" />
     <Compile Include="Adapters\DataContractSerializerAdapter.cs" />
+    <Compile Include="Adapters\JavascriptSerializerAdapter.cs" />
     <Compile Include="Adapters\NetDataContractSerializerAdapter.cs" />
+    <Compile Include="Adapters\NewtonsoftBsonSerializerAdapter.cs" />
     <Compile Include="Adapters\NewtonsoftJsonNetAdapter.cs" />
     <Compile Include="Adapters\NServiceBusBinarySerializerAdapter.cs" />
     <Compile Include="Adapters\NServiceBusXmlSerializerAdapter.cs" />
@@ -83,10 +87,12 @@
     <Compile Include="Adapters\ServiceStackJsonSerializerAdapter.cs" />
     <Compile Include="Adapters\SoapFormatterAdapter.cs" />
     <Compile Include="Adapters\XmlSerializerAdapter.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="IndisposableStream.cs" />
     <Compile Include="ISerializerAdapter.cs" />
     <Compile Include="Messages\ArrayField.cs" />
     <Compile Include="Messages\ArrayProperty.cs" />
+    <Compile Include="Messages\BenchTestObjectA.cs" />
     <Compile Include="Messages\ComposedIDictionaryProperty.cs" />
     <Compile Include="Messages\CollectionOfStrings.cs" />
     <Compile Include="Messages\CollectionOfCustomObjects.cs" />
