--- a/SerializersTests/packages.config
+++ b/SerializersTests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="SharpSerializer" version="2.16" />
+  <package id="TestDataGenerator" version="0.0.3" />
 </packages>
