--- a/SerializersTests/packages.config
+++ b/SerializersTests/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="mbunit" version="3.3.454.0" />
+  <package id="MsgPack" version="0.1.0.2011042300" />
+  <package id="Newtonsoft.Json" version="4.0.4" />
+  <package id="protobuf-net" version="2.0.0.470" />
+  <package id="ServiceStack.Text" version="3.0.6" />
   <package id="SharpSerializer" version="2.16" />
-  <package id="TestDataGenerator" version="0.0.3" />
+  <package id="TestDataGenerator" version="0.0.5" />
 </packages>
