Normalize line endings

--- a/SerializersTests/packages.config
+++ b/SerializersTests/packages.config
@@ -1,11 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Faker" version="1.2" />
+  <package id="log4net" version="1.2.10" targetFramework="net40" />
   <package id="mbunit" version="3.3.454.0" />
   <package id="MsgPack" version="0.1.0.2011042300" />
-  <package id="Newtonsoft.Json" version="4.0.5" />
-  <package id="protobuf-net" version="2.0.0.480" />
-  <package id="ServiceStack.Text" version="3.1.6" />
-  <package id="SharpSerializer" version="2.16" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="NServiceBus" version="3.3.5" targetFramework="net40" />
+  <package id="NServiceBus.Interfaces" version="3.3.5" targetFramework="net40" />
+  <package id="protobuf-net" version="2.0.0.621" targetFramework="net40" />
+  <package id="RavenDB.Client" version="2.0.2261" targetFramework="net40" />
+  <package id="RavenDB.Database" version="2.0.2261" targetFramework="net40" />
+  <package id="RavenDB.Embedded" version="2.0.2261" targetFramework="net40" />
+  <package id="ServiceStack.Text" version="3.9.37" targetFramework="net40" />
+  <package id="SharpSerializer" version="2.18" targetFramework="net40" />
   <package id="TestDataGenerator" version="0.0.7" />
 </packages>
