--- a/Serialization.Bench/packages.config
+++ b/Serialization.Bench/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="4.0.5" />
+  <package id="log4net" version="1.2.10" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="NServiceBus" version="3.3.5" targetFramework="net40" />
+  <package id="NServiceBus.Interfaces" version="3.3.5" targetFramework="net40" />
 </packages>
